--- a/climate/climate.html
+++ b/climate/climate.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Taiwan, Travel, food">
     <meta name="author" content="Jim Chou">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="../project.css">
     <link rel="shortcut icon" type="image/png" href="../favicon/favicon.ico" />
     <title>Trip Guidance to Taiwan :: Climate</title>
