--- a/tips/tips.html
+++ b/tips/tips.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Taiwan travel guidance">
     <meta name="keywords" content="Taiwan, Travel, food">
     <meta name="author" content="Jim Chou">
-    <script src="../script.js" defer></script>
+    <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="shortcut icon" type="image/png" href="../favicon/favicon.ico" />
     <link rel="stylesheet" href="../project.css">
