--- a/traffic/traffic.html
+++ b/traffic/traffic.html
@@ -65,7 +65,7 @@
                             Hong Kong or Japan. Also you can choose the one-day pass or two-day pass. Save your money to
                             rent a car and save your time to find a parking lot in big cities. But please don't forget.
                             Eating and drinking are forbidden in the MRT! Here is the link to the Taipei Mrt guide. You
-                            can find route map, schedule, fee there. <a
+                            can find route map, schedule, fee there. <br><a target="_blank"
                                 href="https://www.travel.taipei/en/information/mrt">Taipei MRT information</a>
                         </figcaption>
                     </figure>
@@ -94,7 +94,7 @@
                             subsequent rides. Recently You even can call a taxi with the help of the clerk using the
                             iBon or FamiPort machines in the convenient stores. During the past, some taxi drivers will
                             take advantage of the tourist by driving through a far path to charge more, but it rarely
-                            happends now. <br>If you are still worried about it, You can use the fare estimator. <a
+                            happends now. If you are still worried about it, You can use the fare estimator. <br><a target="_blank"
                                 href="https://www.taxifarefinder.com/main.php?city=Taipei-Taiwan">Fare Estimator</a>
                         </figcaption>
                     </figure>
@@ -111,7 +111,7 @@
                             coastlines. With changing views and topography at every turn cycling trips never get boring
                             here, and the two-wheeled adventurer is well rewarded with views of the seacoast, mountains
                             and interior valleys that rival anything you’d experience from the seat of a bus or train.
-                            <br>You can find more information here: <a
+                            You can find more information here: <br><a target="_blank"
                                 href="https://bicycletouringpro.com/cycling-in-taiwan-everything-you-need-to-know/">Cycling
                                 in Taiwan</a></figcaption>
                     </figure>
@@ -123,20 +123,20 @@
                 <h3>News & Events</h3>
                 <div class="news">
                     <h4>2019 Sun Moon Lake Cycling, Music & Fireworks Festival</h4>
-                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a
+                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a target="_blank"
                             href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the link to the
                             event homepage</a></p>
                 </div>
                 <div class="news">
                     <h4>2019 Taroko Gorge Marathon</h4>
                     <p>Best chance to challege yourself by the Marathon, at the same time you also can enjoy the
-                        beautiful scenery in Taroko national park.<br><a
+                        beautiful scenery in Taroko national park.<br><a target="_blank"
                             href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080149">Here is the link to the
                             event homepage</a></p>
                 </div>
                 <div class="news">
                     <h4>2019 Biennial Butterfly Beauty Festival</h4>
-                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a
+                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a target="_blank"
                             href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the link to the
                             event homepage</a></p>
                 </div>
