--- a/traffic/traffic.html
+++ b/traffic/traffic.html
@@ -79,7 +79,8 @@
                             well-placed speed trap cameras along the sides. These cameras are very visible, however,
                             with ample warning times and clearly marked signs (in Chinese only), and finding them can be
                             a fun game for passengers in the car. To drive legally in Taiwan, please be sure to first
-                            apply for an International Driver's Permit (IDP) in your home country.</figcaption>
+                            apply for an International Driver's Permit (IDP) in your home country. Here is a website about more information. <br><a target="_blank"
+                            href="https://www.thetravelbrief.com/briefs/taiwan-how-to-rent-a-car-in-taiwan">How to rent a car in Taiwan</a></figcaption>
                     </figure>
                 </div>
                 <div id="traffic-intro">
