--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <a href="foods/mustbuy.html">Buy</a>
                 </div>
             </div>
-            <a href="#" class="food-hidden hidden">Eat</a>
-            <a href="#" class="food-hidden hidden">Buy</a>
+            <a href="foods/musteat.html" class="food-hidden hidden">Eat</a>
+            <a href="foods/mustbuy.html" class="food-hidden hidden">Buy</a>
             <a href="tips/tips.html"><i class="far fa-lightbulb"></i> Feedback</a>
         </nav>
         <div id="hero-index"></div>
