--- a/climate/climate.html
+++ b/climate/climate.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Taiwan, Travel, food">
     <meta name="author" content="Jim Chou">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="script.js" defer></script>
+    <script src="../script.js" async></script>
     <link rel="stylesheet" href="../project.css">
     <link rel="shortcut icon" type="image/png" href="../favicon/favicon.ico" />
     <title>Trip Guidance to Taiwan :: Climate</title>
@@ -47,8 +47,8 @@
                     <a href="../foods/mustbuy.html">Buy</a>
                 </div>
             </div>
-            <a href="#" class="food-hidden hidden">Eat</a>
-            <a href="#" class="food-hidden hidden">Buy</a>
+            <a href="../foods/musteat.html" class="food-hidden hidden">Eat</a>
+            <a href="../foods/mustbuy.html" class="food-hidden hidden">Buy</a>
             <a href="../tips/tips.html"><i class="far fa-lightbulb"></i> Feedback</a>
         </nav>
         <div id="hero-index"></div>
