--- a/tips/tips.html
+++ b/tips/tips.html
@@ -8,8 +8,9 @@
     <meta name="description" content="Taiwan travel guidance">
     <meta name="keywords" content="Taiwan, Travel, food">
     <meta name="author" content="Jim Chou">
-    <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../script.js" async></script>
     <link rel="shortcut icon" type="image/png" href="../favicon/favicon.ico" />
     <link rel="stylesheet" href="../project.css">
     <title>Trip Guidance to Taiwan :: Feedback</title>
@@ -47,8 +48,8 @@
                     <a href="../foods/mustbuy.html">Buy</a>
                 </div>
             </div>
-            <a href="#" class="food-hidden hidden">Eat</a>
-            <a href="#" class="food-hidden hidden">Buy</a>
+            <a href="../foods/musteat.html" class="food-hidden hidden">Eat</a>
+            <a href="../foods/mustbuy.html" class="food-hidden hidden">Buy</a>
             <a href="../tips/tips.html"><i class="far fa-lightbulb"></i> Feedback</a>
         </nav>
         <div id="hero-index"></div>
@@ -101,8 +102,9 @@
                 <h3>News & Events</h3>
                 <div class="news">
                     <h4>2019 Sun Moon Lake Cycling, Music & Fireworks Festival</h4>
-                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a target="_blank"
-                            href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the link to the
+                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a
+                            target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the
+                            link to the
                             event homepage</a></p>
                 </div>
                 <div class="news">
@@ -114,8 +116,9 @@
                 </div>
                 <div class="news">
                     <h4>2019 Biennial Butterfly Beauty Festival</h4>
-                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a target="_blank"
-                            href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the link to the
+                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a
+                            target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the
+                            link to the
                             event homepage</a></p>
                 </div>
             </aside>
@@ -130,6 +133,24 @@
             <a href="#"><img src="../icon/instagram.png" height=35 width=35></a>
             <a href="#"><img src="../icon/twitter.png" height=35 width=35></a>
         </footer>
+
+        <script>
+            $('input').focus(function () {
+                $(this).css('background', 'yellow')
+            })
+            $('input').blur(function () {
+                $(this).css('background', 'white')
+            })
+
+            const score = document.getElementById('score')
+            const output = document.getElementById('output')
+            score.addEventListener('change', () => {
+                // output.innerHTML = '';
+                output.innerHTML = score.value;
+            })
+
+
+        </script>
     </div>
 
 
