--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <div class="main-intro">
                 <div class="main-intro-part-one">
                     <h2>Introduction</h2>
+                    <audio controls="controls">
+                        <source src="audio/bensound-summer.mp3" type="audio/mpeg">
+                    </audio>
+                    <br><small>Enjoy the chill music during planning your trip to Taiwan!</small>
                     <p>Taiwan is an island of unexpected beauty. It also has a mysterious name called "Formosa". In
                         order to realize the meaning behind this mysterious name, we need to go back to 16th century,
                         the Age of Discovery. At that time a Portuguese ship accidentally sailed through the Taiwan
@@ -91,19 +95,28 @@
                 </div>
 
             </div>
+
             <aside id="news">
+
                 <h3>News & Events</h3>
                 <div class="news">
                     <h4>2019 Sun Moon Lake Cycling, Music & Fireworks Festival</h4>
-                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the link to the event homepage</a></p>
+                    <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a
+                            target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the
+                            link to the event homepage</a></p>
                 </div>
                 <div class="news">
                     <h4>2019 Taroko Gorge Marathon</h4>
-                    <p>Best chance to challege yourself by the Marathon, at the same time you also can enjoy the beautiful scenery in Taroko national park.<br><a  href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080149">Here is the link to the event homepage</a></p>
+                    <p>Best chance to challege yourself by the Marathon, at the same time you also can enjoy the
+                        beautiful scenery in Taroko national park.<br><a
+                            href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080149">Here is the link to the
+                            event homepage</a></p>
                 </div>
                 <div class="news">
                     <h4>2019 Biennial Butterfly Beauty Festival</h4>
-                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a  href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the link to the event homepage</a></p>
+                    <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a
+                            href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the link to the
+                            event homepage</a></p>
                 </div>
             </aside>
             <div id="secondary-intro">
