add homepage style and audio bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Taiwan travel guidance">
     <meta name="keywords" content="Taiwan, Travel, food">
     <meta name="author" content="Jim Chou">
-    <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="project.css">
@@ -52,14 +53,15 @@
             <a href="tips/tips.html"><i class="far fa-lightbulb"></i> Feedback</a>
         </nav>
         <div id="hero-index"></div>
-        <main>
+        <button id="activate">Press me to open this website</button>
+        <main id="main">
             <div class="main-intro">
                 <div class="main-intro-part-one">
                     <h2>Introduction</h2>
                     <audio controls="controls">
-                        <source src="audio/bensound-summer.mp3" type="audio/mpeg">
-                    </audio>
-                    <br><small>Enjoy the chill music during planning your trip to Taiwan!</small>
+                            <source src="audio/bensound-summer.mp3" type="audio/mpeg">
+                        </audio>
+                        <br><small id="enjoy-music">Enjoy the chill music during planning your trip to Taiwan!</small>
                     <p>Taiwan is an island of unexpected beauty. It also has a mysterious name called "Formosa". In
                         order to realize the meaning behind this mysterious name, we need to go back to 16th century,
                         the Age of Discovery. At that time a Portuguese ship accidentally sailed through the Taiwan
@@ -95,33 +97,35 @@
                 </div>
 
             </div>
-
             <aside id="news">
-
                 <h3>News & Events</h3>
                 <div class="news">
                     <h4>2019 Sun Moon Lake Cycling, Music & Fireworks Festival</h4>
+
                     <p>Enjoy the sunshine, breeze, beautiful fireworks at the astonishing Sun Moon Lake. <br><a
-                            target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is the
-                            link to the event homepage</a></p>
+                            target="_blank" href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080101">Here is
+                            the link to the event homepage</a></p>
+
+
                 </div>
                 <div class="news">
                     <h4>2019 Taroko Gorge Marathon</h4>
+
                     <p>Best chance to challege yourself by the Marathon, at the same time you also can enjoy the
                         beautiful scenery in Taroko national park.<br><a
                             href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080149">Here is the link to the
                             event homepage</a></p>
+
                 </div>
                 <div class="news">
                     <h4>2019 Biennial Butterfly Beauty Festival</h4>
+
                     <p>A big fan of beautiful creatures like butterfly? You don't want to miss this festival.<br><a
                             href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002019&lid=080168">Here is the link to the
                             event homepage</a></p>
+
                 </div>
             </aside>
-            <div id="secondary-intro">
-
-            </div>
         </main>
         <footer>
             <p id="text-color-black">created 2019 September</p>
@@ -131,6 +135,25 @@
             <a href="#"><img src="icon/twitter.png" height=35 width=35></a>
         </footer>
     </div>
+
+
+    <script>
+        $(main).css('height', '0')
+        // $('#main').css('height', '0')
+        // $('#news').css( 'height', '0')
+        
+        $('#activate').click(function() {
+            $('#main').animate({height: "1000px"}, 1500)
+            $('#activate').hide()
+        })
+
+        $(document).ready(function () {
+            setInterval(function () {
+                $('#enjoy-music').css('color', `rgb(${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)})`)
+            }, 300)
+        })
+    
+    </script>
 
 
 
